[package]
name = "hit-with-gpt"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
bincode = "1"
clap = { version = "4.0", features = ["derive"] }
notify = "6"
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }

[dev-dependencies]
tower = "0.5"
hyper = "1"
serial_test = "2"
httpmock = "0.6"

[[bin]]
name = "hit"
path = "src/main.rs"
